Missing styling fix - too large margin for view selector icons

--- a/static/scss/courses/group-work.scss
+++ b/static/scss/courses/group-work.scss
@@ -181,6 +181,7 @@
         font-size: 16px;
         width: 50px;
         height: 30px;
+        margin-bottom: 0;
         font-family: FontAwesome;
 
         &.active {
